--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <header class="header flex p-1 px-lg-3">
     <header class="header-icon">
-      <img src="/images/logo.svg" alt="Logo Fylo">
+      <img src="images/logo.svg" alt="Logo Fylo">
     </header>
     <nav class="nav-menu flex opacity-7">
       <a href="#features">Features</a>
